Hack to prevent double borders.

--- a/src/main/webapp/modal-overlay.css
+++ b/src/main/webapp/modal-overlay.css
@@ -163,7 +163,7 @@ a:hover {
   border: 1px;
 }
 
-.button-group butto:not(:last-child) {
+.button-group button:not(:last-child) {
   border-right:none;
 }
 
